[project]
name = "yoink"
description = "An open-source framework for tuning smarter and cheaper large-language models"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "YOINK authors"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
]
keywords = ["jax", "flax", "tensorflow"]

# pip dependencies of the project
dependencies = [
  "flax>=0.6.1",
  "jax>=0.3.21",
]

# This is set automatically by flit using `yoink.__version__`
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/Qonfused/YOINK"
repository = "https://github.com/Qonfused/YOINK"
# Other: `documentation`, `changelog`

[project.optional-dependencies]
# Development deps (unittest, linting, formating,...)
# Installed through `pip install .[dev]`
dev = [
  "numpy",
  "optax",
  "pytest",
  "pytest-xdist",
  "pylint>=2.6.0",
  "yapf",
]

[build-system]
requires = ["flit_core >=3.5,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "yoink"
